--- a/style.css
+++ b/style.css
@@ -1,23 +1,36 @@
-html {
-    box-sizing: border-box;
-    font-size: 16px;
-  }
+
   
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
-  
-  body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+body, h1, h2, h3, h4, h5, h6, p, ol, ul {
     margin: 0;
     padding: 0;
     font-weight: normal;
-  }
+}
   
-  ol, ul {
+ol, ul {
     list-style: none;
-  }
+}
   
-  img {
+img {
     max-width: 100%;
     height: auto;
-  }
+}
+
+div{
+    /* height: 200px; */
+    border: 1px solid black;
+}
+.container{
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 20fr 80fr;
+}
+.header{
+    grid-column: 2 / 3;
+}
+.side-bar{
+    grid-column: 1 / 2;
+    grid-row: 1/3;
+}
+.main-content{
+    grid-column: 2/3;
+}
