--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
     margin: 0;
     padding: 0;
     font-weight: normal;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
   
 ol, ul {
@@ -28,9 +29,23 @@ div{
     grid-column: 2 / 3;
 }
 .side-bar{
+    color: white;
+    padding: 24px;
+    background-color: grey;
     grid-column: 1 / 2;
     grid-row: 1/3;
 }
 .main-content{
     grid-column: 2/3;
+}
+
+.dashboard-title{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-weight: 600;
+}
+.dashboard-title > h2{
+    margin-left: 8px;
+    font-size: 32px;
 }
