--- a/style.css
+++ b/style.css
@@ -23,29 +23,51 @@ div{
 .container{
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 20fr 80fr;
+    grid-template-rows: 20% 80%;
 }
 .header{
     grid-column: 2 / 3;
+    grid-row: 1;
 }
 .side-bar{
     color: white;
     padding: 24px;
     background-color: grey;
+    grid-row: 1/-1;
     grid-column: 1 / 2;
-    grid-row: 1/3;
+    height: 800px;
 }
 .main-content{
     grid-column: 2/3;
+    grid-row: 2/2;
 }
 
 .dashboard-title{
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    font-weight: 600;
+    font-weight: 800;
 }
 .dashboard-title > h2{
     margin-left: 8px;
     font-size: 32px;
+}
+.nav-one{
+    display:grid;
+    margin-top: 32px;
+    margin-bottom: 32px;
+}
+.nav-item{
+    margin: 8px;
+    padding: 6px;
+    display: flex;
+    gap: 8px;
+    cursor: pointer;
+}
+.nav-item > p{
+    font-weight: 600;
+    font-size: 18px;
+}
+.nav-item:hover{
+    color: rgba(235, 233, 233, 0.686);
 }
