--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ div{
     grid-row: 1/-1;
     grid-column: 1 / 2;
     height: 1000px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12);
+    z-index: 2;
 }
 .main-content{
     grid-column: 2/3;
@@ -154,7 +156,7 @@ div{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 8px;
+    gap: 12px;
 }
 .right-button{
     background-color: #363740;
@@ -168,6 +170,7 @@ div{
 .right-button:hover{
     cursor: pointer;
     color: #DDE2FF;
+    transform: scale(1.05);
 }
 .main-content{
     display: grid;
@@ -208,12 +211,10 @@ div{
     border: 2px solid #DFE0EB;
     background-color: white;
     grid-column: 1/4;
-    /* grid-row: 2/3; */
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     border-radius: 16px;
     overflow: hidden;
-    /* padding: 8px; */
 }
 .trends p{
     font-size: 20px;
@@ -226,7 +227,9 @@ div{
     align-items: center;
     justify-content: center;
 }
-
+.chart img{
+    cursor: pointer;
+}
 .chart-details{
     grid-column: 6/9;
     border-left: 2px solid #dfe0eb;
@@ -249,15 +252,135 @@ div{
 .trends h4{
     color: #9FA2B4;
 }
+.recent-tickets{
+    grid-column: 4;
+    grid-row: 1/3;
+}
+.recent-tickets h2{
+    font-size: 22px;
+    font-weight: 800;
+    margin-bottom: 12px;
+}
+.recent-tickets h3 {
+    font-size: 16px;
+}
+.recent-tickets p{
+    font-size: 13px;
+    color: #9FA2B4;
+}
+.tickets-area{
+    background-color: white;
+    border: 2px solid #DFE0EB;
+    border-radius: 16px;
+    padding: 16px;
+}
+.ticket-info{
+    padding: 8px;
+    border-bottom: 1.5px solid #DFE0EB;
+}
+.ticket-info:hover h3{
+    cursor: pointer;
+    color: #3751FF;
+}
+.ticket-info + .last{
+    border-bottom: 1.5px solid transparent;
+}
+.tasks{
+    grid-column: 1/-1;
+    grid-row: 3/-1;
+    background-color: white;
+    border: 2px solid #DFE0EB;
+    border-radius: 16px;
+    padding: 32px;
+}
+.tasks-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 16px;
+}
+.tasks a{
+    font-size: 14px;
+    padding-right: 8px;
+}
+.tasks a:hover{
+    transform: scale(1.1);
+    transition: transform 0.2s;
+}
+.tasks h2{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+.tasks p{
+    font-size: 14px;
+    color: #959595;
+}
+.tasks h4{
+    margin-left: 20px;
+}
+.task{
+    height: 32px;
+    display: flex;
+}
+.task h4{
+    align-self: center;
+}
+.round {
+    position: relative;
+  }
+  
+  .round label {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    cursor: pointer;
+    height: 28px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 28px;
+  }
+  
+  .round label:after {
+    border: 2px solid #fff;
+    border-top: none;
+    border-right: none;
+    content: "";
+    height: 6px;
+    left: 7px;
+    opacity: 0;
+    position: absolute;
+    top: 8px;
+    transform: rotate(-45deg);
+    width: 12px;
+  }
+  
+  .round input[type="checkbox"] {
+    visibility: hidden;
+  }
+  
+  .round input[type="checkbox"]:checked + label {
+    background-color: #66bb6a;
+    border-color: #66bb6a;
+  }
+  
+  .round input[type="checkbox"]:checked + label:after {
+    opacity: 1;
+  }
+  .round label:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s;
+  }
+      
 
-
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1280px) {
     .row-two{
         display: flex;
         flex-direction: column;
     }
     .right-buttons{
-        margin-top: 48px;
+        margin-top: 72px;
     }
     .main-content{
         margin-top: 64px;
